# cirith

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yml
admin/: Cargo.toml
admin/src/: lib.rs  main.rs  metrics.rs  middleware.rs  state.rs
admin/src/handlers/: health.rs  keys.rs  mod.rs  routes.rs
admin/tests/: api_test.rs
gateway/: Cargo.toml
gateway/src/: main.rs  rate_limit.rs
scripts/: seed.sql
shared/: Cargo.toml
shared/src/: auth.rs  config.rs  error.rs  lib.rs  storage.rs  validation.rs
src/: lib.rs  main.rs
src/admin/: mod.rs
src/auth/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/metrics/: mod.rs
src/proxy/: handler.rs  mod.rs
src/rate_limit/: mod.rs
