[package]
name = "cirith"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lightweight API Gateway"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }